Fix import statements and define z-index variable in stage-header.scss

--- a/src/components/stage-header/stage-header.scss
+++ b/src/components/stage-header/stage-header.scss
@@ -1,6 +1,9 @@
 @import "../../css/units.css";
 @import "../../css/colors.css";
-@import "../../css/z-index.css";
+@import "../../css/z-index.scss";
+
+// Define z-index variables
+$z-index-stage-header: 10;
 
 .stage-header-wrapper {
     position: relative;
